Add a copy constructor to CollapsedBorderValue https://bugs.webkit.org/show_bug.cgi?id=81502

Reviewed by Hajime Morita.

Due to the lack of this copy constructor, GCC (x86) creates a broken copy
constructor and it causes a build break on Google Chrome.

* rendering/style/CollapsedBorderValue.h:
(WebCore::CollapsedBorderValue::CollapsedBorderValue):
(CollapsedBorderValue):


Canonical link: https://commits.webkit.org/98715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111171 268f45cc-cd09-0410-ab3c-d52691b4dbfc